--- a/projeto-sabespe/package.json
+++ b/projeto-sabespe/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@swimlane/ngx-charts": "^20.5.0",
     "electron": "^28.1.4",
     "electron-packager": "^17.1.2",
     "rxjs": "~7.8.0",
@@ -34,6 +35,9 @@
     "@angular-devkit/build-angular": "^16.2.7",
     "@angular/cli": "^16.2.7",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/d3-scale": "^4.0.8",
+    "@types/d3-selection": "^3.0.10",
+    "@types/d3-shape": "^3.1.6",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
